shenyu-examples/shenyu-examples-http/k8s/shenyu-examples-http-deployment.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-http-deployment
  labels:
    app: shenyu-examples-http
    all: shenyu-examples-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-http
      all: shenyu-examples-http
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-examples-http
        all: shenyu-examples-http
    spec:
      containers:
        - image: shenyu-examples-http
          name: shenyu-examples-http
          livenessProbe:
            exec:
              command:
                - wget -q -O - http://localhost:8011/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          ports:
            - containerPort: 8189
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shenyu-zk
    all: shenyu-examples-http
  name: shenyu-zk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-zk
      all: shenyu-examples-http
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-zk
        all: shenyu-examples-http
    spec:
      containers:
        - image: zookeeper:3.5
          name: shenyu-zk
          resources: {}
          ports:
            - containerPort: 2181
              name: client
            - containerPort: 2888
              name: server
            - containerPort: 3888
              name: leader-election
            - containerPort: 8080
              name: website
      restartPolicy: Always
status: {}
