shenyu-examples/shenyu-examples-http/k8s/shenyu-examples-http.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-http-deployment
  labels:
    app: shenyu-examples-http
    all: shenyu-examples-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-http
      all: shenyu-examples-http
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-examples-http
        all: shenyu-examples-http
    spec:
      containers:
        - image: shenyu-examples-http
          name: shenyu-examples-http
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - "-c"
                - wget -q -O - http://localhost:8189/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          ports:
            - containerPort: 8189
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-examples-http-service
  labels:
    app: shenyu-examples-http
    all: shenyu-examples-http
spec:
  selector:
    app: shenyu-examples-http
    all: shenyu-examples-http
  type: NodePort
  ports:
    - name: "8189"
      port: 8189
      targetPort: 8189
      nodePort: 31189
status:
  loadBalancer: {}
